# show

server/: .env  .gitignore  asr.py  dlmodels.py  hotwords.txt  lingshu.py  main.py  medgemma.py  modasrdl.py  modmgdl.py  panecho.py  pyproject.toml  tasks.py
server/public/: index.html
server/public/assets/: Analysis-B23gct6_.js  Analysis-BbPaYnFx.css  Analysis-CAy3T5Cu.css  Analysis-Dbfs_ptF.js  Asr-9sl84ZS3.js  Asr-B0w1-z6f.js  Asr-B6T3TN4F.js  Asr-BATqFe_p.js  Asr-BBEqgvzb.js  Asr-BLEHf83u.js  Asr-BM0VCVTT.js  Asr-BUIFNyrS.js  Asr-C_l9L8gq.css  Asr-Cmrhv6ue.js  Asr-CwkQvK9V.js  Asr-CxOYI5Mp.css  Asr-DFaf1lYR.js  Asr-DOiNbcTv.js  Asr-YQ6Y89Mt.js  Asr-gF2jh6gj.js  Assist-B0Fwvs7D.js  Assist-BNNB4oj1.js  Assist-BrWEoR6g.js  Assist-C15q8g_U.js  Assist-C5wMt8Lz.js  Assist-CiqidOGc.js  Assist-CvhOWjKM.js  Assist-D4TVR8dS.js  Assist-D8CgEsUG.css  Assist-DRXPtHG6.js  Assist-DSLaha7p.js  Assist-Db22w2Cb.js  Assist-DcLsIv4r.css  Assist-DpK00hnl.js  Assist-Dx81XrPF.js  Assist-Hi8V9oj6.js  Assist-fu8X7BOb.css  Check-BRyUgCyI.js  Check-BYfIFwOd.js  Check-C_YuZmmZ.css  (+162 more)
ui/: .prettierrc  index.html  package.json  vite.config.js
ui/src/: App.vue  main.js
ui/src/router/: index.js
ui/src/utils/: asr.js  http.js
ui/src/views/health/analysis/: Analysis.vue
ui/src/views/health/assist/: Assist.vue
ui/src/views/health/check/: Check.vue
ui/src/views/health/heart/: Heart.vue
ui/src/views/health/image/: Image.vue
ui/src/views/health/triage/: Triage.vue
ui/src/views/health/triage/bodymap/: BodyContainer.vue  BodyMap.vue  BodyPart.vue  bodyparts.js
ui/src/views/index/: Index.vue
ui/src/views/voice/asr/: Asr.vue
ui/src/views/voice/form/: Form.vue
ui/src/views/voice/multi/: Multi.vue
