[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.9.0",
    "fastapi[all]>=0.115.13",
    "funasr>=1.2.6",
    "httpx>=0.28.1",
    "invoke>=2.2.0",
    "pyinstaller>=6.14.1",
    "python-dotenv>=1.1.0",
    "qwen-vl-utils>=0.0.11",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.2",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128" # 确认此 URL 是否存在
explicit = true
