[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "accelerate>=1.9.0",
    "dicom2jpg>=0.1.10",
    "fastapi[all]>=0.116.1",
    "funasr>=1.2.6",
    "httpx>=0.28.1",
    "humanize>=4.12.3",
    "invoke>=2.2.0",
    "pandas>=2.3.1",
    "pyinstaller>=6.14.2",
    "python-dotenv>=1.1.1",
    "timm>=1.0.19",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.2",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu118" }]
torchvision = [{ index = "pytorch-cu118" }]
torchaudio = [{ index = "pytorch-cu118" }]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
